# scold

./: .gitignore  README.md  pyproject.toml
docs/: README.md
src/scold/: __init__.py
src/scold/cli/: app.py
src/scold/cli/commands/: new_object.py
src/scold/config/: app.py  reader.py  types.py
src/scold/templating/: renderer.py
src/scold/utils/: exception.py  logger.py
