[project]
name = "scold-cli"
version = "0.1.0"
description = "Scaffolding generation CLI"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "João Pedro", email = "vieiraleao2005@gmail.com" }]
dependencies = [
  "attrs>=25.4.0",
  "case-converter>=1.2.0",
  "cyclopts>=4.3.0",
  "loguru>=0.7.3",
  "mako>=1.3.10",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "questionary>=2.1.1",
  "rich>=14.2.0",
]

[project.scripts]
scold = "scold:app"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scold"
